--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "fs": "0.0.1-security",
     "jsonfile": "^5.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
